# openslesandffmpeg

./: README.md
OpenSLES/: build.gradle  settings.gradle
OpenSLES/AudioRecorderLib/: build.gradle
OpenSLES/AudioRecorderLib/src/main/java/com/net168/audiorecord/opensles/: OpenSLESRecord.java
OpenSLES/app/: CMakeLists.txt  build.gradle
OpenSLES/app/src/main/: AndroidManifest.xml
OpenSLES/app/src/main/assets/: rd111.3gpp
OpenSLES/app/src/main/cpp/: WlListener.cpp  WlListener.h  native-lib.cpp
OpenSLES/app/src/main/java/aa/opensles/: InitApplication.java  MainActivity.java
OpenSLES/app/src/main/res/layout/: activity_main.xml
OpenSLES/gradle/wrapper/: gradle-wrapper.properties
